--- a/assets/partners.scss
+++ b/assets/partners.scss
@@ -101,7 +101,7 @@
         position: relative;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: center;
         flex-wrap: wrap;
         padding: 30px 0px 55px;
         margin-left: -15px;
