--- a/assets/home.scss
+++ b/assets/home.scss
@@ -875,10 +875,15 @@
     
             h1 {
                 color: #fff;
-                //font-weight: 700;
-                font-size: 3rem;
-                //line-height: 3.3rem;
-                //line-height: 2.4rem;
+                font-size: 3rem; 
+            }
+
+            @media screen and (max-width: $md-breakpoint) {
+                margin-bottom: 1rem !important;
+
+                h1 {
+                    font-size: 2.2rem;
+                }
             }
 
             span.subtitle {
@@ -904,26 +909,38 @@
                 }
             }
         }
-    
-        .hero-illustration {
-            margin-bottom: 0 !important;
-            //width: 150% !important;
-            margin-right: -15rem;
-        }
-    
-        .hero-btn {
-            //margin-bottom: 0 !important;
 
 
+        .hero-list {
             @media screen and (max-width: $md-breakpoint) {
-                &{
-                    margin-left: auto;
-                    margin-right: auto;
-                    display: block;
-                    text-align: center;
+                ul {
+                    width: fit-content;
                 }
             }
         }
+
+
+    
+        .hero-illustration {
+            margin-bottom: 0 !important;
+            margin-right: -15rem;
+        }
+
+        @media screen and (max-width: $md-breakpoint) {
+            .hero-btns {
+                text-align: center;
+            }
+
+            .hero-btn {
+                margin-left: auto;
+                margin-right: auto;
+                text-align: center;
+            }
+        }
+
+
+        
+
 
         .nc-list {
             margin: 2rem auto;
